# roboninja

./: .gitignore  README.md  agents.MD  pyproject.toml  roboninja.py
binja_sample_plugin/: README.md
docs/: binaryninja_service_plan.md
roboninja_plugin/: README.md  __init__.py  plugin.json
src/roboninja/: __init__.py  _patches.py  binaryninja_service.py  cli.py  server.py
src/roboninja_plugin/: README.md  __init__.py
tests/: test_binaryninja_service.py  test_cli.py  test_server.py  test_server_helpers.py
